Fixed build, OpenCV config and Java v update

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -14,3 +14,16 @@ dependencyResolutionManagement {
 }
 rootProject.name = "CVGLAssessment"
 include ':app'
+
+def localProperties = new Properties()
+def localPropertiesFile = new File(rootDir, 'local.properties')
+if (localPropertiesFile.exists()) {
+    localPropertiesFile.withInputStream { stream ->
+        localProperties.load(stream)
+    }
+}
+def opencvDir = localProperties.getProperty('opencv.dir')
+if (opencvDir != null) {
+    include ':opencv'
+    project(':opencv').projectDir = new File(opencvDir + '/sdk')
+}
