--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation project(':opencv')
     
     // CameraX
     def camerax_version = "1.3.1"
@@ -70,5 +71,8 @@ dependencies {
     implementation "androidx.camera:camera-camera2:${camerax_version}"
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
     implementation "androidx.camera:camera-view:${camerax_version}"
-    implementation project(':opencv')
+    implementation "androidx.camera:camera-extensions:${camerax_version}"
+
+    // OkHttp for WebSockets
+    implementation("com.squareup.okhttp3:okhttp:4.12.0")
 }
