--- a/web/package.json
+++ b/web/package.json
@@ -4,12 +4,17 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "dev": "ts-node --esm src/index.ts",
+    "build": "tsc"
+  },
+  "dependencies": {
+    "vite": "^5.0.0",
+    "ws": "^8.16.0",
+    "@types/ws": "^8.5.10",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "@types/node": "^20.10.0"
   }
 }
